{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 16,
  "lineage": "7170cdbb-0461-8f9d-21ed-6fabee9109ad",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023839011004:security-group/sg-05adef62d9a0283c5",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "sg-05adef62d9a0283c5",
            "name": "default",
            "tags": {
              "Name": "gh-bip-sg"
            },
            "vpc_id": "vpc-026a0da3cc0a3b2bd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:023839011004:security-group/sg-0ac11a5dba9f5188c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ac11a5dba9f5188c",
            "ingress": [],
            "name": "bip-db-20211029234249701500000001",
            "name_prefix": "bip-db-",
            "owner_id": "023839011004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "bip",
              "Name": "aurora-bip-db"
            },
            "tags_all": {
              "Environment": "bip",
              "Name": "aurora-bip-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a0da3cc0a3b2bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.current",
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "From allowed SGs",
            "from_port": 5432,
            "id": "sgrule-3675770386",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ac11a5dba9f5188c",
            "self": false,
            "source_security_group_id": "sg-05adef62d9a0283c5",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.current",
            "data.aws_secretsmanager_secret_version.current",
            "data.aws_security_group.default",
            "module.db.aws_rds_cluster.this",
            "module.db.aws_rds_cluster_parameter_group.postgresql",
            "module.db.aws_security_group.this",
            "module.db.random_id.snapshot_identifier"
          ]
        }
      ]
    }
  ]
}